--- a/Homework1/Homework1/Homework1.vcxproj
+++ b/Homework1/Homework1/Homework1.vcxproj
@@ -146,6 +146,9 @@
   <ItemGroup>
     <ClCompile Include="ResistanceGrid.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\include\_BLAS.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
