--- a/BLAS/TestSet/CMakeLists.txt
+++ b/BLAS/TestSet/CMakeLists.txt
@@ -1,2 +1,7 @@
 project(TestSet)
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+	set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../bin/Debug)
+else()
+	set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../bin/Release)
+endif()
 add_executable(TestSet TestSet.cpp)
