--- a/BLAS/MatMultMT/MatMultMT.vcxproj
+++ b/BLAS/MatMultMT/MatMultMT.vcxproj
@@ -78,11 +78,11 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>../../include;$(MY_INCLUDE);$(IncludePath)</IncludePath>
+    <IncludePath>$(MY_INCLUDE);$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>../../include;$(MY_INCLUDE);$(IncludePath)</IncludePath>
+    <IncludePath>$(MY_INCLUDE);$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
